--- a/styles/style.css
+++ b/styles/style.css
@@ -4,15 +4,15 @@ body {
   font-size: 16px;
   font-family: sans-serif;
   background-color: #F3EDE7;
+  height: 100vh;
+  width: 100lvw;
 }
 
 main {
-  height: 100vh;
-  width: 100vw;
   display: grid;
   grid-template-columns: 1fr 3fr 4fr;
-  gap: 10px;
   padding: 30px;
+  margin: 10px auto;
 }
 
 .heading {
@@ -27,11 +27,15 @@ main {
   margin: 0;
   font-weight: 500;
   text-align: center;
+  color: #0E044B;
+  padding: auto 0;
 }
 
 .list {
   display: grid;
   grid-template-rows: repeat(5, auto);
+  max-height: 700px;
+  overflow-y: scroll;
 }
 
 .book {
@@ -42,22 +46,24 @@ main {
   border-bottom: 1.5px solid black;
 }
 .book__img {
-  width: 80px;
+  width: 90px;
   object-fit: cover;
   grid-column: 1;
+  margin-bottom: 20px;
 }
 .book__content p {
-  margin: 0;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  line-height: 20px;
 }
 .book__title {
   font-size: 1.2rem;
   grid-column: 2;
+  margin: 0 auto;
+  color: #0E044B;
 }
 .book__author {
   font-size: 0.8rem;
   grid-column: 2;
+  margin: 5px auto;
 }
 .book__bubble {
   grid-column: 2;
@@ -71,6 +77,8 @@ main {
   font-size: 1.4rem;
   grid-column: 2;
   font-weight: 600;
+  margin: 25px auto;
+  color: #0E044B;
 }
 .book__icon {
   grid-column: 3;
@@ -78,6 +86,7 @@ main {
   justify-self: center;
   font-size: 1.5rem;
   margin-bottom: 30px;
+  cursor: pointer;
 }
 
 .form {
@@ -91,10 +100,11 @@ main {
   border-radius: 40px;
   width: 250px;
   height: 45px;
-  background-color: navy;
+  background-color: #0E044B;
   border: none;
   color: white;
   font-size: 1.1rem;
+  cursor: pointer;
 }
 .form form {
   display: grid;
@@ -102,7 +112,10 @@ main {
   grid-template-rows: auto;
   gap: 15px;
   justify-items: center;
-  border-left: 1px solid navy;
+  border-left: 1px solid #0E044B;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  padding-right: 50px;
   padding-left: 150px;
 }
 
@@ -110,7 +123,7 @@ main {
   font-size: 1.2rem;
   width: 300px;
   border: none;
-  border-bottom: 2px solid navy;
+  border-bottom: 2px solid #0E044B;
   outline: none;
   margin: 5px 0;
   padding: 8px 0;
