--- a/styles/style.css
+++ b/styles/style.css
@@ -33,9 +33,11 @@ main {
 
 .list {
   display: grid;
-  grid-template-rows: repeat(5, auto);
+  grid-template-rows: auto;
   max-height: 700px;
+  row-gap: 10px;
   overflow-y: scroll;
+  scrollbar-color: #B9B7BC #F3EDE7;
 }
 
 .book {
@@ -47,6 +49,7 @@ main {
 }
 .book__img {
   width: 90px;
+  height: 135px;
   object-fit: cover;
   grid-column: 1;
   margin-bottom: 20px;
@@ -116,7 +119,14 @@ main {
   padding-top: 100px;
   padding-bottom: 50px;
   padding-right: 50px;
-  padding-left: 150px;
+  padding-left: 200px;
+}
+.form__error {
+  font-size: 0.9rem;
+  color: rgb(208, 68, 68);
+}
+.form__error i {
+  font-size: 0.6rem;
 }
 
 .input-block {
@@ -128,6 +138,15 @@ main {
   margin: 5px 0;
   padding: 8px 0;
   background-color: #F3EDE7;
+}
+
+#invalid::placeholder {
+  color: #0E044B;
+}
+
+#invalid {
+  background-color: rgba(255, 129, 129, 0.5);
+  border-radius: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
