--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,10 @@
 $deepblue : #0E044B;
 $beige : #F3EDE7;
+$scrollbar: #B9B7BC;
+$error: rgba(255, 129, 129, 0.5);
+$errorMsg: rgb(208, 68, 68);
+
+
 
 body {
     margin: 0;
@@ -39,9 +44,11 @@ main {
 
 .list {
     display: grid;
-    grid-template-rows: repeat(5, auto) ;
+    grid-template-rows: auto ;
     max-height: 700px;
+    row-gap: 10px;
     overflow-y: scroll;
+    scrollbar-color: $scrollbar $beige;
 }
 
 .book {
@@ -54,6 +61,7 @@ main {
 
     &__img {
         width: 90px;
+        height: 135px;
         object-fit: cover;
         grid-column: 1;
         margin-bottom: 20px;
@@ -133,9 +141,17 @@ main {
         padding-top: 100px;
         padding-bottom: 50px;
         padding-right: 50px;
-        padding-left: 150px;
+        padding-left: 200px;
     }
 
+    &__error {
+        font-size: .9rem;
+        color: $errorMsg;
+        
+        i{
+            font-size: .6rem;
+        }
+    }
 }
 
 .input-block {
@@ -146,5 +162,17 @@ main {
     outline: none;
     margin: 5px 0;
     padding: 8px 0;
-    background-color: #F3EDE7;
+    background-color: $beige;
+    
+    
 }
+
+#invalid::placeholder {
+   color: $deepblue;
+}
+
+#invalid {
+    background-color: $error;
+    border-radius: 10px;
+}
+
